--- a/Task2_InbarGoldberg/index.html
+++ b/Task2_InbarGoldberg/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="ענבר גולדברג" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
 
-    <link rel="stylesheet" href="styles/myStyle.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="../styles/myStyle.css" type="text/css" media="screen" />
     <script src="/jScripts/jquery-1.12.0.min.js"></script>
     
 </head>
